@@ -32,7 +32,7 @@
 
 include(FindPkgConfig)
 
-pkg_check_modules(PC_HARFBUZZ harfbuzz>=0.9.0)
+pkg_check_modules(PC_HARFBUZZ harfbuzz>=0.9.7)
 
 find_path(HARFBUZZ_INCLUDE_DIRS NAMES hb.h
     HINTS ${PC_HARFBUZZ_INCLUDE_DIRS} ${PC_HARFBUZZ_INCLUDEDIR}
